--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <h1 style="font-family:Lemon;font-size:36px">Rotaract CLub of RVCE</h1>
        </div>   
        <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center" style="color:white;padding-left: 100px;" >
-        <a href="/" class="mr-5 hover:text-gray-900" id="navhigh">Home</a>
+        <a href="http://rotaractrvce3190.com/" class="mr-5 hover:text-gray-900" id="navhigh">Home</a>
         <a href="https://www.instagram.com/rotaractrvce/" class="ml-3 text-gray-500">
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
               <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
