--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
   <section class="text-gray-700 body-font">
     <div class="container px-5 py-24 mx-auto flex flex-col">
       <div class="lg:w-4/6 mx-auto">
-        <div class="rounded-lg h-64 overflow-hidden">
-          <img alt="content" class="object-cover object-center h-full w-full" src="https://dummyimage.com/1200x500">
+        <div class="rounded-lg h-64 overflow-hidden" style="">
+          <img alt="content" class="object-cover object-center h-full w-full" src="formimg.JPG" style=""> 
         </div>
         <div class="flex flex-col sm:flex-row mt-10">
           <div class="sm:w-1/3 text-center sm:pr-8 sm:py-8">
@@ -317,8 +317,8 @@
     </div>
   </section>
 
-<section style="height:980px;background-color:rgba(203,213,224,var(--text-opacity));">
-  <iframe src="frm.html" style="width:100%" width="640" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<section style="background-color:rgba(203,213,224,var(--text-opacity));display:flex;height:1477px">
+  <iframe allowtransparency="true" src="https://www.formpl.us/form/1357766008" frameborder="0" style="width:100%;max-height: 100%; border:none;" scrolling="yes"></iframe>
 </section>
 <br>
 
